--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"firebase": "^9.18.0",
 		"framer-motion": "^9.0.4",
 		"next": "13.1.6",
+		"next-auth": "^4.22.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.43.7",
